Fix credits and nav-bar on small screens.
This is still flawed, but at least it's still usable.

Added .editorconfig for .scss files.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,47 +4,68 @@
 @import "{{ site.theme }}";
 
 code {
-    background-color: #191919 // Add background to inline code samples.
+  background-color: #191919 // Add background to inline code samples.
 }
 
 .wrapper {
-    max-width: 60rem; // Increase max width so that code examples fit.
+  max-width: 60rem; // Increase max width so that code examples fit.
 }
 
 #header {
-    position: relative;
-    height: 52px;
+  position: relative;
+  height: 52px;
 
-    nav {
-        margin: 0px auto;
-        max-width: 60rem;
-    }
+  nav {
+    display: block;
+    margin: 0px auto;
+    max-width: 60rem;
+  }
 }
 
 
 section {
-    margin-top: 0px;
-    padding-top: 6px;
-    max-width: 100%; // Match .wrapper width.
+  margin-top: 0px;
+  padding-top: 6px;
+  max-width: 100%; // Match .wrapper width.
 }
 
 .nav_button {
-    float: left;
-    margin-right: 6px;
+  float: left;
+  margin-right: 6px;
 }
 
 .credits {
-    font-size: 11px;
-    font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: normal;
-    color: #696969;
-    margin-top: -10px;
+  font-size: 11px;
+  font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  color: #696969;
+  margin-top: -10px;
 
-    &.left {
-      float: left;
+  &.left {
+    float: left;
+  }
+
+  &.right {
+    float: right;
+  }
+}
+
+
+@media print, screen and (max-width: 720px) {
+  .credits {
+    display: block;
+    width: 100%;
+    line-height: 30px;
+    text-align: center;
+
+    .left {
+      float: none;
+      display: block;
     }
 
-    &.right {
-      float: right;
+    .right {
+      float: none;
+      display: block;
     }
   }
+}
